<resources>
    <string name="app_name">MobileProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading_message_processing">Loading....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="personId">CNPJ</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="product">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="value">Value $</string>

    <string name="homeText">Product Panel</string>
    <string name="addText">Add Product</string>
    <string name="listText">List Product</string>
    <string name="updateText">Update Product</string>


    <string name="btnCreateAccount">Create Account</string>
    <string name="btnBack">Back</string>
    <string name="btnList">List Products</string>
    <string name="btnAdd">Add Product</string>
    <string name="btnSignOut">Sign Out</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnLogin">Login</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="btnCreateProduct">CREATE PRODUCT</string>
    <string name="btnUpdateProduct">UPDATE PRODUCT</string>
    <string name="btnSearch">SEARCH</string>

    <string name="linkAbout">About</string>
</resources>