<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutProd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvvalue"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="Value"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/value"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvquantity" />

    <TextView
        android:id="@+id/tvProduto"
        android:layout_width="226dp"
        android:layout_height="49dp"
        android:padding="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvid"
        tools:text="@string/product" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="67dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/quantity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProduto" />

    <TextView
        android:id="@+id/tvquantity"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="Quantity"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:backgroundTint="@color/black"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ImageButton
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/tvProduto"
        app:layout_constraintTop_toTopOf="@+id/tvProduto"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/btUpdNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/btDelete"
        app:layout_constraintStart_toEndOf="@+id/btDelete"
        app:layout_constraintTop_toTopOf="@+id/btDelete"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>